Fix gaps between items

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,10 +11,12 @@ img {
   font-size: 36px;
   font-weight: 900;
   text-align: center;
+  margin-bottom: 32px;
 }
 
 .container{
   display: flex;
+  gap: 52px;
 }
 
 .info-block{
